fixed card size on mobile

--- a/src/App.css
+++ b/src/App.css
@@ -174,8 +174,8 @@
 
 @media (max-width: 500px) {
   .card {
-    width: 14%;
-    height: 100px;
+    width: 75%;
+    height: 80px;
     margin: 10px;
   }
 
